fix: recipe transfer not working